<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/homeiconselected"
        android:title="@string/Home_Caption" />

    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/diaryiconselected"
        android:title="@string/nav_diary_title" />

    <item
        android:id="@+id/nav_resources"
        android:icon="@drawable/resourcesiconselected"
        android:title="@string/nav_resource_title" />

    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/progressiconselected"
        android:title="@string/nav_progress_title" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settingsiconselected"
        android:title="@string/nav_settings_title" />
</menu>