<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentMusic">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Text_WelcomeUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LandingCaption"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="@string/WelcomeUserDefaultCaption" />

        <TextView
            android:id="@+id/Text_NoMusicHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MusicNotListenedCaption"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:id="@+id/Layout_MusicHistoryGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Text_HasMusicHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MusicHistory_Caption" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/Text_TrackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TrackName_Caption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text_TrackNameDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Text_TrackGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TrackGenre_Caption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text_TrackGenreDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Text_TrackArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TrackArtist_Caption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text_TrackArtistDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Text_TrackLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TrackLength_Caption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text_TrackLengthDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Text_TrackMoodBefore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MoodBefore_Caption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text_TrackMoodBeforeDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Text_TrackMoodAfter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MoodAfter_Caption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text_TrackMoodAfterDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_ChangeUserDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="button_EditUserDetails"
            android:text="@string/ChangeUserDetails_Caption" />

        <Button
            android:id="@+id/btn_ChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="button_ChangePassword"
            android:text="@string/ChangePassword_Caption" />

        <Button
            android:id="@+id/btn_Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="button_Logout"
            android:text="@string/Logout_Caption" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>