<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserDetails">

    <LinearLayout
        android:id="@+id/Layout_EditUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_EditUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EditPageCaption"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Text_EditFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FNameCaption"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EditText_EditFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/FNameCaption"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Text_EditLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LNameCaption"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EditText_EditLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/LNameCaption"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Text_EditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EmailCaption"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EditText_EditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EmailCaption"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Text_EditAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Age_Caption"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EditText_EditAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Age_Caption"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Text_EditMusicApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PreferredApp_Caption"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EditText_EditMusicApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PreferredApp_Caption"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Text_EditGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gender_Caption"
            android:textAlignment="center"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/GenderSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkedButton="@+id/RadioButton_EditEachTrack"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RadioButton_EditEachTrack"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MaleCaption" />

            <RadioButton
                android:id="@+id/RadioButton_EditFemale"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/FemaleCaption" />

            <RadioButton
                android:id="@+id/RadioButton_EditOther"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/OtherCaption" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_BackEditUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:onClick="button_Back"
            android:text="@string/BackButtonCaption" />

        <Button
            android:id="@+id/btn_SubmitEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:onClick="button_Submit"
            android:text="@string/Submit_Caption" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>